--- a/Mal_Anime_Archive_Frm/Mal_Anime_Archive_Frm/packages.config
+++ b/Mal_Anime_Archive_Frm/Mal_Anime_Archive_Frm/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="JikanDotNet" version="1.3.0" targetFramework="net461" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
 </packages>
