--- a/Mal_Anime_Archive_Frm/Mal_Anime_Archive_Frm/Mal_Anime_Archive_Frm.vbproj
+++ b/Mal_Anime_Archive_Frm/Mal_Anime_Archive_Frm/Mal_Anime_Archive_Frm.vbproj
@@ -76,15 +76,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CefSharp">
-      <HintPath>..\packages\CefSharp.Common.73.1.130\CefSharp\x64\CefSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="CefSharp.Core">
-      <HintPath>..\packages\CefSharp.Common.73.1.130\CefSharp\x64\CefSharp.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="CefSharp.WinForms">
-      <HintPath>..\packages\CefSharp.WinForms.73.1.130\CefSharp\x64\CefSharp.WinForms.dll</HintPath>
-    </Reference>
     <Reference Include="JikanDotNet, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\JikanDotNet.1.3.0\lib\netstandard2.0\JikanDotNet.dll</HintPath>
     </Reference>
@@ -216,6 +207,7 @@
     <Compile Include="frmXml.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="JsonParser.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
